# dummy-rs

./: Cargo.toml  README.md
examples/: basic.rs
src/: array.rs  lib.rs  option.rs  primitives.rs  result.rs  string.rs  tuple.rs  vec.rs
src/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  vec.rs  vec_deque.rs
src/containers/: mod.rs  sync.rs
