[package]
name = "dummy"
version = "0.2.1"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "Type oriented fake data generation"
keywords = ["faker", "data", "random"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cksac/dummy-rs"
homepage = "https://github.com/cksac/dummy-rs"
edition = "2018"

[dependencies]
rand = "0.6.5"